--- a/pycharm/map.jinja
+++ b/pycharm/map.jinja
@@ -14,15 +14,11 @@
         },
         'Windows':{ 'prefix' : 'C:\\Program files',
                     'homes'  : 'C:\\Users',
+                    'tmpdir' : 'C:\\temp\\pycharmtmp\\',
                     'command': '\\pycharm.exe',
-                    'symlink': 'C:\\pycharm\\pycharm',
-                    'symhome': 'C:\\pycharm',
                     'osflavour': 'windows',
         },
-  }
-  , grain="os"
-  , merge=defs
-  , base="pycharm"
+  }, grain="os", merge=defs, base="pycharm"
  )
 %}
 
@@ -40,9 +36,9 @@
   {%- set _home = '{0}/pycharm-{1}-{2}'.format( ide.prefix, ide.jetbrains.edition,
                                                    jdata[ pcode ][0]['version'],) %}
 {% endif %}
-{% do ide.alt.update({ 'realhome': _home, 'realcmd': _home ~ ide.command },) %}
+{% do ide.jetbrains.update({ 'realhome': _home, 'realcmd': _home ~ ide.command },) %}
 
-# Set Jetbrains IDE download details
+# Set download sources
 {%- set src_hashurl = jdata[ pcode ][0]['downloads'][ ide.osflavour ]['checksumLink'] %}
 {%- set src_hashsum  = salt['cmd.run']('curl -s {0}'.format( src_hashurl )).split(' ')[0] %}
 {% do ide.dl.update({
@@ -53,6 +49,5 @@
        'unpack_opts' : ' -z -C ' ~  _home ~ ' --strip-components=1' },
     )
 %}
-
 {% set pycharm = ide %}
 
