--- a/pycharm/map.jinja
+++ b/pycharm/map.jinja
@@ -5,6 +5,8 @@
 
 {% import_yaml 'pycharm/defaults.yaml' as defs %}
 {% set osmap = salt['grains.filter_by']({
+        'default':{
+        },
         'MacOS':  { 'prefix' : '/Applications/PyCharm',
                     'homes'  : '/Users',
                     'command': '/pycharm',
