--- a/pycharm/map.jinja
+++ b/pycharm/map.jinja
@@ -15,24 +15,28 @@
       )
     )
 %}
-{%- set pycharm = salt['grains.filter_by']( {'defaults': defaults}, default='defaults', merge=_config) %}
+{%- set p = salt['grains.filter_by']( {'defaults': defaults}, default='defaults', merge=_config) %}
 
-{%- set pcode = pycharm.product ~ pycharm.edition if pycharm.edition else pycharm.product %}
-{%- set jdata = salt['cmd.run']('curl -s -L {0}{1}'.format(pycharm.pkg.archive.uri, pcode))|load_yaml %}
-{%- do pycharm.update({ 'version': jdata[ pcode ][0]['version'] }) %}
+{%- set edition = '' if 'edition' not in p else p.edition %}
+{%- set pcode = p.product ~ edition %}
+{%- set jdata = salt['cmd.run']('curl -s -L {0}{1}'.format(p.pkg.archive.uri, pcode))|load_yaml %}
+{%- do p.update({ 'version': jdata[ pcode ][0]['version'] }) %}
 
-{%- set dirname = 'pycharm-%s-%s'|format( pycharm.edition, pycharm.version) %}
-{%- set url = jdata[ pcode ][0]['downloads'][ pycharm.flavour ]['link'] %}
-{%- set hash  = salt['cmd.run']('curl -L -s {0}'.format( jdata[ pcode ][0]['downloads'][ pycharm.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
+{%- set dirname = 'p-%s-%s'|format( edition, p.version) %}
+{%- set url = jdata[ pcode ][0]['downloads'][ p.flavour ]['link'] %}
+{%- set hash  = salt['cmd.run']('curl -L -s {0}'.format( jdata[ pcode ][0]['downloads'][ p.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
 
-{%- if pycharm.pkg.use_upstream_archive %}
-       {%- do pycharm.pkg.archive.update({'name': pycharm.dir.archive ~ '/' ~ dirname,
-                                          'path': pycharm.dir.archive ~ '/' ~ dirname,
-                                          'source': url,
-                                          'source_hash': hash }) %}
+{%- if p.pkg.use_upstream_archive %}
+    {%- do p.pkg.archive.update({'name': p.dir.archive ~ '/' ~ dirname,
+                                 'path': p.dir.archive ~ '/' ~ dirname,
+                                 'source': url,
+                                 'source_hash': hash }) %}
+{%- endif %}
+{%- if p.pkg.use_upstream_macapp %}
+    {%- do p.pkg.macapp.update({'name': '/Applications',
+                                'path': '/Applications',
+                                'source': url,
+                                'source_hash': hash }) %}
 {%- endif %}
 
-{%- if pycharm.pkg.use_upstream_macapp %}
-       {%- do pycharm.pkg.macapp.update({
-              'name': '/Applications',  'path': '/Applications', 'source': url, 'source_hash': hash }) %}
-{%- endif %}
+{%- set pycharm = p %}
