--- a/pycharm/files/default/shortcut.desktop.jinja
+++ b/pycharm/files/default/shortcut.desktop.jinja
@@ -1,8 +1,9 @@
+{%- set appdir = '%s%s'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
 [Desktop Entry]
 Encoding=UTF-8
-Name={{ appname }}{{ '\ %sE'|format(edition) if edition is defined and edition else '' }}.app"
-Comment={{ appname }}{{ '\ %sE'|format(edition) if edition is defined and edition else '' }}.app"
-Icon={{ path }}/{{ command.split('.')[0] }}.png
-Exec={{ path }}/{{ command }}
+Name={{ appdir }}
+Comment={{ appdir }}
+Icon={{ appdir }}/{{ command.split('.')[0] }}.png
+Exec={{ appdir }}/{{ command }}
 Terminal=false
 Type=Application
